// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text Component matches snapshot 1`] = `
<Text
  bold={false}
  style={
    Array [
      Object {
        "color": "#54565b",
        "fontFamily": "Roboto",
        "fontSize": 16,
      },
    ]
  }
/>
`;

exports[`text Component matches snapshot for dark mode 1`] = `
<Text
  bold={false}
  color="grey400"
  style={
    Array [
      Object {
        "color": "#7d7d7d",
        "fontFamily": "Roboto",
        "fontSize": 16,
      },
    ]
  }
/>
`;

exports[`text Component matches snapshot with \`bold\` prop 1`] = `
<Text
  bold={true}
  style={
    Array [
      Object {
        "color": "#54565b",
        "fontFamily": "Roboto-Bold",
        "fontSize": 16,
      },
    ]
  }
/>
`;

exports[`text Component matches snapshot with all props 1`] = `
<Text
  align="right"
  bold={false}
  color="green"
  fontSize={24}
  lineHeight={24}
  style={
    Array [
      Object {
        "color": "#00a07a",
        "fontFamily": "Roboto-Bold",
        "fontSize": 24,
        "lineHeight": 24,
        "textAlign": "right",
      },
    ]
  }
  type="h1"
/>
`;

exports[`text Component matches snapshot with as prop 1`] = `
<Text
  bold={false}
  style={
    Array [
      Object {
        "color": "#54565b",
        "fontFamily": "Roboto-Bold",
        "fontSize": 36,
      },
    ]
  }
  type="h1"
/>
`;

exports[`text Component matches snapshot with as prop and fontSize and lineHeight 1`] = `
<Text
  bold={false}
  fontSize={20}
  lineHeight={20}
  style={
    Array [
      Object {
        "color": "#54565b",
        "fontFamily": "Roboto-Bold",
        "fontSize": 20,
        "lineHeight": 20,
      },
    ]
  }
  type="h1"
/>
`;

exports[`text Component matches snapshot with as prop and margin and padding 1`] = `
<Text
  bold={false}
  lineHeight={24}
  marginTop={20}
  paddingLeft={10}
  style={
    Array [
      Object {
        "color": "#54565b",
        "fontFamily": "Roboto-Bold",
        "fontSize": 36,
        "lineHeight": 24,
        "marginTop": 20,
        "paddingLeft": 10,
      },
    ]
  }
  type="h1"
/>
`;

exports[`text Component matches snapshot with as prop and paddingVertical and marginHorizontal 1`] = `
<Text
  bold={false}
  lineHeight={24}
  marginHorizontal={20}
  paddingVertical={10}
  style={
    Array [
      Object {
        "color": "#54565b",
        "fontFamily": "Roboto-Bold",
        "fontSize": 36,
        "lineHeight": 24,
        "marginHorizontal": 20,
        "paddingVertical": 10,
      },
    ]
  }
  type="h1"
/>
`;

exports[`text Component matches snapshot with fontSize prop 1`] = `
<Text
  bold={false}
  fontSize={12}
  style={
    Array [
      Object {
        "color": "#54565b",
        "fontFamily": "Roboto",
        "fontSize": 12,
      },
    ]
  }
/>
`;

exports[`text Component when wrong color value passed in props, use default color 1`] = `
<Text
  bold={false}
  color="abcd"
  style={
    Array [
      Object {
        "color": "#54565b",
        "fontFamily": "Roboto",
        "fontSize": 16,
      },
    ]
  }
/>
`;
